# Lower-Deck-Engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  sample_scene.json  vcpkg.json
Shaders/: Base.hlsl  CMakeLists.txt  Camera.hlsli  Cluster.hlsl  Cluster.hlsli  DisneyBRDF.hlsl  GBuffer.hlsl  LightPass.hlsl  Lights.hlsli  Material.hlsli  MeshShader101.hlsl  MipMap2D.hlsl  MipMap3D.hlsl  PBR.hlsl  RootSignatures.hlsli  Test.hlsl
Shaders/Compute/: MipMap2D.hlsl  MipMap3D.hlsl
Shaders/Deferred/: DeferredCommon.hlsli  GBuffer.hlsl  PBR.hlsl
Shaders/Mesh/: Amplification.hlsl  Mesh.hlsl
Shaders/Raytracing/: ClosestHit.hlsl  Miss.hlsl  RayGen.hlsl  Shared.hlsli  Test.hlsl
Shaders/Raytracing/Basic/: ClosestHit.hlsl  Miss.hlsl  RayGen.hlsl  Shared.hlsli
Shaders/Sky/: EquirectangularToCube.hlsl  IrradianceCS.hlsl  SkyCommon.hlsli  Skybox.hlsl  SpecularBRDF.hlsl  SpecularCS.hlsl
Shaders/Tesselation/: Domain.hlsl  Hull.hlsl  Tessellation.hlsl
Source/: CMakeLists.txt
Source/Editor/: CMakeLists.txt  Colors.hpp  Editor.cpp  Editor.hpp  EditorBackend.hpp  EditorColors.hpp  EditorTheme.hpp
Source/Editor/Components/: Components.cpp  Components.hpp
Source/Engine/: CMakeLists.txt  Config.hpp
Source/Engine/Core/: Color.hpp  CoreDefines.hpp  CoreMinimal.hpp  CoreTypes.hpp  Defines.hpp  Error.hpp  FileSystem.cpp  FileSystem.hpp  Logger.cpp  Logger.hpp  Math.hpp  RefPtr.hpp  Singleton.hpp  String.hpp  Utility.hpp
Source/Engine/Graphics/: AssetManager.cpp  AssetManager.hpp  ImageBasedLighting.cpp  ImageBasedLighting.hpp  Light.hpp  ShaderCompiler.cpp  ShaderCompiler.hpp  ShadowMap.cpp  ShadowMap.hpp  Skybox.cpp  Skybox.hpp  TextureManager.cpp  TextureManager.hpp
Source/Engine/Managers/: AssetManager.cpp  AssetManager.hpp  ShaderCompiler.cpp  ShaderCompiler.hpp  ShaderManager.cpp  ShaderManager.hpp  TextureManager.cpp  TextureManager.hpp
Source/Engine/Platform/: Platform.hpp  Timer.hpp  Window.cpp  Window.hpp
Source/Engine/RHI/: Buffer.hpp  BufferConstants.hpp  CommandList.hpp  Device.hpp  PipelineState.hpp  RHI.hpp  RHICommon.cpp  RHICommon.hpp  Resource.hpp  Shader.hpp  SwapChain.hpp  Texture.hpp  Types.cpp  Types.hpp
Source/Engine/RHI/D3D12/: D3D12Adapter.cpp  D3D12Buffer.cpp  D3D12Buffer.hpp  D3D12CommandList.cpp  D3D12CommandList.hpp  D3D12Context.cpp  D3D12Context.hpp  D3D12DepthBuffer.cpp  D3D12DepthBuffer.hpp  D3D12Descriptor.hpp  D3D12DescriptorHeap.cpp  D3D12DescriptorHeap.hpp  D3D12Device.cpp  D3D12Device.hpp  D3D12Fence.cpp  D3D12Fence.hpp  D3D12Memory.cpp  D3D12Memory.hpp  D3D12PipelineState.cpp  D3D12PipelineState.hpp  D3D12Queue.cpp  D3D12Queue.hpp  D3D12RHI.cpp  D3D12RHI.hpp  D3D12Raytracing.cpp  D3D12Raytracing.hpp  D3D12Resource.cpp  D3D12Resource.hpp  D3D12RootSignature.cpp  D3D12RootSignature.hpp  D3D12SwapChain.cpp  D3D12SwapChain.hpp  D3D12Texture.cpp  D3D12Texture.hpp  D3D12Utility.cpp  D3D12Utility.hpp  D3D12Viewport.cpp  D3D12Viewport.hpp
Source/Engine/Render/: RaytracingRenderer.hpp  Renderer.cpp  Renderer.hpp
Source/Engine/Render/RenderPass/: DepthPrepass.hpp  GBufferPass.cpp  GBufferPass.hpp  LightPass.cpp  LightPass.hpp  RenderPass.hpp  SkyPass.cpp  SkyPass.hpp
Source/Engine/Scene/: Actor.hpp  Entity.hpp  Light.cpp  Light.hpp  Scene.cpp  Scene.hpp  SceneCamera.cpp  SceneCamera.hpp  SceneLighting.cpp  SceneLighting.hpp  SceneLoader.cpp  SceneLoader.hpp  SceneSerializer.hpp  World.cpp  World.hpp
Source/Engine/Scene/Components/: CameraComponent.hpp  Components.hpp  LightComponent.hpp  NameComponent.hpp  TransformComponent.hpp
Source/Engine/Scene/Model/: Mesh.hpp  Meshlet.cpp  Meshlet.hpp  Model.cpp  Model.hpp
Source/Engine/Utility/: FileSystem.cpp  FileSystem.hpp  Utility.hpp
Source/LowerDeck/: Application.cpp  Application.hpp  CMakeLists.txt  imgui.ini  main.cpp
